#475: Develop search widget / #636: Wizard for Search Widget  - fixed broken search-ctrl layout at intermediate breakpoints  - fixed ellipsis on search result  - fixed layout to single column on narrow container width  - removed fixed height for widget preview  - header restyle for widget	 (moved logo / removed help link)

--- a/src/main/webapp/themes/default/css/header-sw.css
+++ b/src/main/webapp/themes/default/css/header-sw.css
@@ -35,9 +35,14 @@
 /* outer layout */
 
 .search-widget-container #logo{
-	z-index:2;
-	position:relative;
-	display:table-row;
+	z-index:	2;
+	position:	relative;
+	display:	table-row;
+	width:		auto;
+}
+
+.search-widget-container .logo{
+	top:	-0.25em;
 }
 
 .search-widget-container #logo h1{
@@ -46,7 +51,7 @@
 }
 
 .search-widget-container #logo h1 a{	
-	display:	table-cell;
+	display:	block;
 }
 
 .search-widget-container #logo-and-search{
@@ -63,16 +68,7 @@
 	margin-bottom:	1.5em;
 }
 
-.search-widget-container .logo,
-.search-widget-container .logo-t-and-c{
-	background-repeat:	no-repeat;
-	width:				110px;
-	height:				62px;
-	display:			block;
-	position:			relative;
-	left:				-1px;
-	background-size:	contain;
-}
+
 
 .search-widget-container .logo{
 	background-image:	url('/portal/themes/default/images/europeana-logo-2.png');	
@@ -93,25 +89,11 @@
 		height:				123px;		
 	}
 	
-	.search-widget-container.desktop .logo{
-		top:				0.25em;
-	}
-	
-	/*
-	.logo{
-		background-image:	url('/portal/themes/default/images/europeana-logo-2.png');
-	}
-	*/
 	
 	.search-widget-container.desktop .logo-t-and-c{
 		background-image:	url('/portal/themes/default/images/europeana-logo-tc.png');
 	}
-	
-	.search-widget-container.desktop #logo{
-		width:			25%;
-		display:		table-cell;
-		min-width:		auto;
-	}
+
 
 	.search-widget-container.desktop #query-full, #query-info{
 		display:		table-cell;
@@ -119,7 +101,7 @@
 	}
 	
 	.search-widget-container.desktop #query-full{
-		width:			65%;
+		width:			100%;
 		margin-top:		0;
 		margin-bottom:	0;
 	}
@@ -130,7 +112,7 @@
 	}
 	
 	.search-widget-container.desktop #logo-and-search{
-		padding-top:	1.25em;
+		XXXpadding-top:	1.25em;
 		padding-bottom:	1.5em;
 	}
 	
@@ -171,7 +153,7 @@
 	border-collapse: separate;
 	cell-padding:	0;
 	cell-spacing:	0;
-	border:			0;
+	border:			0 !important;
 	position:		relative;
 }
 
@@ -215,7 +197,7 @@
 
 
 .search-widget-container table tr:first-child{
-	border:		1px solid #E4E4E4;
+	border:		1px solid #E4E4E4 !important;
 	font-size:	1.4em;
 }
 
@@ -396,6 +378,8 @@
 	bottom:					0;
 	right:					0;
 	padding:				0.5em;
+	
+	position:				static;
 }
 
 /*
