--- a/src/main/webapp/themes/default/css/responsive-grid.css
+++ b/src/main/webapp/themes/default/css/responsive-grid.css
@@ -146,7 +146,6 @@ img{-ms-interpolation-mode:bicubic;}
 	}
 
 	.container{
-		background-color:	#999;
 		background-color:	#DADADA;
 	}
 
